sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:4: error: not found: value ecart
  ecart = getNombreValeurs()
  ^AlgCombSort:8: error: not found: value ecart
    if (ecart > 1 ) {
        ^AlgCombSort:10: error: not found: value ecart
      ecart = ecart / 1.3
      ^AlgCombSort:16: error: not found: value ecart
    while (i+ecart < getNombreValeurs()) {
             ^AlgCombSort:18: error: not found: value ecart
      if (i > i+ecart) {
                ^AlgCombSort:20: error: not found: value ecart
        echange(i,i+ecart)
                    ^AlgCombSort:28: error: not found: value ecart
  } while ((ecart > 1) || ())
            ^