sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  
  ecart = getNombreValeurs()
  
  do {
    
    if (ecart > 1 ) {
      
      ecart = ecart / 1.3
      
    }
    
    var i = 0
    
    while (i+ecart < getNombreValeurs()) {
      
      if (i > i+ecart) {
        
        echange(i,i+ecart)
        i = i + 1
        
      }
    

    }
    
  } while ((ecart > 1) || ())
  
}